<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.emandi.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_aboutus"
        android:name="com.example.emandi.fragment.AboutusFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.emandi.fragment.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/navigation_addjins"
        android:name="com.example.emandi.fragment.AddJinsFragment"
        android:label="@string/title_addjins"
        tools:layout="@layout/fragment_addjins" />
    <fragment
        android:id="@+id/navigation_addmark"
        android:name="com.example.emandi.fragment.AddMarkFragment"
        android:label="@string/title_addmarks"
        tools:layout="@layout/fragment_addmark" />
</navigation>